kubernetes/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: keycloak
